Fix mobile wave overlap

--- a/css/style.css
+++ b/css/style.css
@@ -463,7 +463,7 @@ ol {
 .why {
   position: relative;
   overflow: visible;
-  margin-top: 8px;
+  margin-top: -24px;
   padding: 0 0 64px;
   background: #f4f7ff;
   z-index: 1;
@@ -472,7 +472,7 @@ ol {
 .why__wave {
   position: absolute;
   width: 100vw;
-  height: 1509px;
+  height: 840px;
   left: 50%;
   top: -140px;
   transform: translateX(-50%);
@@ -1489,9 +1489,10 @@ ol {
 }
 
 .services {
-  margin-top: -24px;
+  margin-top: 0;
   overflow: hidden;
   contain: layout paint;
+  z-index: 2;
 }
 
 .services__container {
