--- a/scss/components/_why.scss
+++ b/scss/components/_why.scss
@@ -1,7 +1,7 @@
 ﻿.why {
   position: relative;
   overflow: visible;
-  margin-top: 8px;
+  margin-top: -24px;
   padding: 0 0 64px;
   background: #f4f7ff;
   z-index: 1;
@@ -10,7 +10,7 @@
 .why__wave {
   position: absolute;
   width: 100vw;
-  height: 1509px;
+  height: 840px;
   left: 50%;
   top: -140px;
   transform: translateX(-50%);
