--- a/scss/layouts/_responsive.scss
+++ b/scss/layouts/_responsive.scss
@@ -8,9 +8,10 @@
 }
 
 .services {
-  margin-top: -24px;
+  margin-top: 0;
   overflow: hidden;
   contain: layout paint;
+  z-index: 2;
 }
 
 .services__container {
